force-app/main/default/objects/Application_Form__c/Application_Form__c.object-meta.xml
<CustomObject>
    <label>Application Form</label>
    <nameField>
        <displayFormat>AF-{0000}</displayFormat>
        <label>Application Form  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>