force-app/main/default/objects/Application_Form__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Application Forms</relationshipLabel>
    <relationshipName>Application_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>