force-app/main/default/objects/Application_Form__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>When completed, any changes in the MAF</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>