force-app/main/default/objects/Application_Form__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name of the Application Form, now we will have just one, maybe in the future we will have additional application forms</description>
    <label>Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>