force-app/main/default/objects/Application_Form__c/fields/Name_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Name_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id, TEXT(Name__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>